Fix "expand/collapse video" button color inside spoiler

--- a/public/css/futaba.css
+++ b/public/css/futaba.css
@@ -35,7 +35,7 @@ a:hover {
 }
 
 a.expandCollapse:hover {
-    color: #666666;
+    color: #777777;
 }
 
 hr {
@@ -93,6 +93,14 @@ span.spoiler:hover {
 
 span.spoiler:hover a {
     color: #DD0000;
+}
+
+span.spoiler:hover > span[data-video-id] > a.expandCollapse {
+    color: #444444;
+}
+
+span.spoiler:hover > span[data-video-id] > a.expandCollapse:hover {
+    color: #777777;
 }
 
 span.spoiler:hover .cspoilerTitle {
